--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,10 +1,10 @@
 .App {
   text-align: center;
-  width: 100%;
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
   background-color: #eeeeee;
 }
 
-* {
+/* * {
   border: 1px solid red;
-}
+} */
