--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -24,6 +24,36 @@
 }
 
 .Subtitle {
-  width: 60%;
+  width: 40%;
   height: 100%;
+}
+
+@media (max-width: 500px) {
+  .Home {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    padding: 2.5rem;
+  }
+
+  .ProfilePic {
+      height: 50%;
+      width: 50%;
+      overflow: hidden;
+      clip-path: circle();
+  }
+
+  .ProfilePic, .Subtitle {
+    margin: 1rem;
+  }
+
+
+  .Subtitle {
+    width: 70%;
+    height: 100%;
+  }
+
 }
